--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
     "php": ">=5.6"
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "master",
   "repositories": [
   ],
   "autoload": {
