--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "xyx/aliyun-php-sdk",
+  "name": "xyx/aliyun-php-sdk2",
   "description": "aliyun-php-sdk-vod composer pack",
   "keywords": [
     "aliyun",
